fix(Stacks): Adjust text size and spacing for mobile view

--- a/src/component/Stacks/Stacks.module.css
+++ b/src/component/Stacks/Stacks.module.css
@@ -90,11 +90,11 @@
   list-style: none;
 }
 
-.description-list {
+/* .description-list {
   padding-left: 0;
   margin-top: 0;
   margin-top: 0;
-}
+} */
 
 .description {
   grid-column: 2 / span 10;
@@ -150,14 +150,33 @@
 
   .title {
     grid-column: 1/-1;
+    margin-top: 4rem;
   }
 
   .logo-container {
     grid-column: 1/-1;
+
+    margin-top: 2rem;
+    margin-bottom: 1rem;
   }
 
   .description {
     grid-column: 1/-1;
+    margin-top: 2rem;
+
+    .selected-skill-name {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    .sentence {
+      font-size: 1.125rem;
+      margin-bottom: 1.5rem;
+      display: block;
+
+      /* 줄 간격 */
+      line-height: 1.75;
+    }
   }
 
   .logo-icon {
